--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,33 @@
+/* body styling */
+
 *{
     background-color:#f9eae1 ;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:#7d4f50;
 }
+
+h1{
+  padding: 20px;
+}
+
+
+/* button to click */
+button {
+    border: none;
+    color: #5e503f;
+    background-color: #cc8b86;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #d1be9c;
+    color: white;
+  }
+  
